<resources>
    <string name="app_name">Shop</string>
    <string name="name">Név</string>
    <string name="password">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="registration">Regisztráció</string>
    <string name="user_name">Felhasználónév</string>
    <string name="email_address">E-mail cím</string>
    <string name="password_again">Jelszó megerősítése</string>
    <string name="cancel">Mégse</string>
    <string name="phone_number">Telefonszám</string>
    <string name="address">Cím</string>
    <string name="account_type">Fiók típusa</string>
    <string name="customer">Vásárló</string>
    <string name="seller">Eladó</string>
    <string name="product_description">Termék leírása.</string>

    <string name="title_placeholder">Title</string>
    <string name="item_placeholder">Leírás</string>
    <string name="item_info_placeholder">Here is some news</string>
    <string name="subtitle_detail_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ultrices congue rutrum. Phasellus elementum ipsum ac convallis aliquam. Suspendisse eleifend eros a enim faucibus mollis. Nunc placerat, est vitae vestibulum blandit, dolor diam fringilla tellus, eu euismod mauris neque at neque.</string>
    <string name="to_cart">Kosárba</string>
    <string name="delete">Törlés</string>
    <string name="guest_login">Bejelentkezés vendégként</string>
    <string name="google_login">Bejelentkezés google fiókkal</string>
    <string name="n_lunk_minden_bombaj">Nálunk minden bombajó!</string>

    <string-array name="phone_labels">
        <item>Otthoni</item>
        <item>Munkahelyi</item>
        <item>Mobil</item>
        <item>Egyéb</item>
    </string-array>

    <string-array name="shopping_item_names">
        <item>Easy Mineral kapszula</item>
        <item>Étkezést kiváltó citromos szelet</item>
        <item>B12-Vitamin</item>
        <item>Étkezést kiváltó csokis szelet</item>
        <item>Étkezést kiváltó epres szelet</item>
        <item>Étkezést kiváltó kávés szelet</item>
        <item>Acai Berry Kivonat</item>
        <item>Appetito Szirup</item>
        <item>Cink Immuno Rágótabletta</item>
        <item>Chlorella Alga</item>
        <item>Jód tabletta</item>
        <item>Króm Pikolinát</item>
        <item>Kálium</item>
        <item>Kalcium-Magnézium</item>
        <item>Halkollagén</item>
    </string-array>

    <string-array name="shopping_item_desc">
        <item>Easy Mineral Ásványi Anyag Kapszula</item>
        <item>Étkezést Kiváltó Paleo Szelet Vitaminokkal 65g</item>
        <item>B12-Vitamin 1000mg</item>
        <item>Étkezést Kiváltó Paleo Szelet Vitaminokkal 65g</item>
        <item>Étkezést Kiváltó Paleo Szelet Vitaminokkal 90g</item>
        <item>Étkezést Kiváltó Paleo Szelet Vitaminokkal 90g</item>
        <item>Acai Berry kivonat 150mg (2 kapszulában)</item>
        <item>Vitaking Appetito kimondottan jóízű szirup</item>
        <item>Cink Immuno Rágótabletta 60db</item>
        <item>100% Chlorella Alga 250db</item>
        <item>Jód (Iodine) Tengeri Moszatból 250db</item>
        <item>Króm Pikolinát tabletta 100db</item>
        <item>Kálium 99mg (100)</item>
        <item>Kalcium-Magnézium 75mg 100db</item>
        <item>100% Halkollagén (150g) Natúr</item>
    </string-array>

    <array name="shopping_item_rates">
        <item>4</item>
        <item>4</item>
        <item>4.5</item>
        <item>5</item>
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>3.5</item>
        <item>3.5</item>
        <item>4</item>
        <item>5</item>
        <item>5</item>
        <item>4.5</item>
        <item>3.5</item>
        <item>2</item>
    </array>

    <array name="shopping_item_images">
        <item>@drawable/easy_mineral</item>
        <item>@drawable/citrom_szelet</item>
        <item>@drawable/b12</item>
        <item>@drawable/csoki_szelet</item>
        <item>@drawable/eper_szelet</item>
        <item>@drawable/kave_szelet</item>
        <item>@drawable/acai_kivonat</item>
        <item>@drawable/appetito_szirup</item>
        <item>@drawable/cink_tabletta</item>
        <item>@drawable/chloerra</item>
        <item>@drawable/jod</item>
        <item>@drawable/krom</item>
        <item>@drawable/kalium</item>
        <item>@drawable/magnezium</item>
        <item>@drawable/kollagen</item>
    </array>

    <array name="shopping_item_price">
        <item>2000 Ft</item>
        <item>2500 Ft</item>
        <item>3000 Ft</item>
        <item>3500 Ft</item>
        <item>4000 Ft</item>
        <item>2000 Ft</item>
        <item>2500 Ft</item>
        <item>3000 Ft</item>
        <item>3500 Ft</item>
        <item>4000 Ft</item>
        <item>2000 Ft</item>
        <item>2500 Ft</item>
        <item>3000 Ft</item>
        <item>3500 Ft</item>
        <item>4000 Ft</item>
    </array>
</resources>
