<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFB6B6B6"
        tools:context=".RegisterActivity">

        <TextView
            android:id="@+id/registrationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="@dimen/register_margin_top"
            android:layout_marginRight="15dp"
            android:text="@string/registration"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="34sp" />

        <EditText
            android:id="@+id/userNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/registrationTextView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="@dimen/register_margin_top"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/green2" />

        <EditText
            android:id="@+id/userEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/userNameEditText"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="@dimen/default_margin_side"
            android:layout_marginTop="@dimen/register_margin_top"
            android:layout_marginRight="@dimen/default_margin_side"
            android:ems="10"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/green2" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/userEmailEditText"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="@dimen/default_margin_side"
            android:layout_marginTop="@dimen/register_margin_top"
            android:layout_marginRight="@dimen/default_margin_side"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/green2" />

        <EditText
            android:id="@+id/passwordAgainEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordEditText"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="@dimen/default_margin_side"
            android:layout_marginTop="@dimen/register_margin_top"
            android:layout_marginRight="@dimen/default_margin_side"
            android:ems="10"
            android:hint="@string/password_again"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/green2" />

        <EditText
            android:id="@+id/phoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordAgainEditText"
            android:layout_marginLeft="@dimen/default_margin_side"
            android:layout_marginTop="@dimen/register_margin_top"
            android:layout_marginRight="@dimen/default_margin_side"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/green2" />

        <Spinner
            android:id="@+id/phoneSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/phoneEditText"
            android:layout_marginLeft="@dimen/default_margin_side"
            android:layout_marginTop="5dp"
            android:layout_marginRight="@dimen/default_margin_side" />


        <EditText
            android:id="@+id/addressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/phoneSpinner"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="@dimen/default_margin_side"
            android:layout_marginTop="@dimen/register_margin_top"
            android:layout_marginRight="@dimen/default_margin_side"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textMultiLine|textPostalAddress"
            android:maxLines="3"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/green2"/>

        <TextView
            android:id="@+id/accountTypeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/addressEditText"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="@dimen/default_margin_side"
            android:layout_marginTop="@dimen/register_margin_top"
            android:layout_marginRight="@dimen/default_margin_side"
            android:gravity="center"
            android:text="@string/account_type"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/accountTypeGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/accountTypeTextView"
            android:layout_marginLeft="@dimen/default_margin_side"
            android:layout_marginTop="@dimen/register_margin_top"
            android:layout_marginRight="@dimen/default_margin_side"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/buyer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/customer"
                android:textColor="@color/white"
                android:textColorHighlight="@color/green2"
                android:textColorHint="@color/white"
                android:textColorLink="@color/green2"
                android:buttonTint="@color/green2" />

            <RadioButton
                android:id="@+id/seller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seller"
                android:textColor="@color/white"
                android:textColorHighlight="@color/green2"
                android:textColorHint="@color/white"
                android:textColorLink="@color/green2"
                android:buttonTint="@color/green2" />

        </RadioGroup>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/accountTypeGroup"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:onClick="register"
                android:text="@string/registration"
                app:backgroundTint="#4CAF50" />

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:onClick="cancel"
                android:text="@string/cancel"
                app:backgroundTint="#4CAF50" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>